# CIN_GRUPO6

./: .gitignore  README.md
code/: MANUAL_UTILIZADOR.md  README.md  TECHNICAL_DOCUMENTATION.md  TESTING_GUIDE.md  USER_GUIDE.md  pyproject.toml  requirements.txt
code/app/: evaluation_framework.py  evaluation_results.json  main.py  test_cases.py
code/app/services/: graph.py  solution.py
code/app/services/algoritms/: a_star.py  aco.py  dijkstra.py
code/app/utils/: co2.py  feed.py  geo.py  loaddata.py  map.py  route.py  time.py
code/notebook/: route-optimization-optimized.ipynb
report/: GRUPO6_PPT.pptx  GRUPO6_REPORT.md  gerar_apresentacao.py  grupo6_PPT.odp  relatorio_apresentacao.pptx
