[project]
name = "cin-grupo6"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos da Mota Bergueira", email = "pg11605@alunos.uminho.pt"},
    {name = "Diego Jefferson Mendes Silva", email = "pg59999@alunos.uminho.pt"},
    {name = "Filipa Araújo Pereira", email = "pg42201@alunos.uminho.pt"},
    {name = "Rui Manuel Martins Marques Rodrigues", email = "pg7942@alunos.uminho.pt"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14.1 || >3.14.1"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "networkx (>=3.6.1,<4.0.0)",
    "osmnx (>=2.0.7,<3.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "gtfs-kit (>=12.0.0,<13.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "numpy (>=2.4.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
